# rail_notebooks

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  render_notebooks.py  render_script.py
.github/workflows/: just-core-notebooks.yml  just-creation-notebooks.yml  just-estimation-notebooks.yml  just-evaluation-notebooks.yml  just-goldenspike-notebook.yml  render-notebooks.yml  render_notebooks.yml  smoke-test.yml  testing-and-coverage.yml  update-readme.yml
docs/: conf.py  core_notebooks.rst  creation_notebooks.rst  goldenspike.rst  goldenspike_notebook.rst  index.rst  notebook_cell_background.css  notebooks.rst  requirements.txt
docs/_static/css/: notebooks.css
docs/notebooks/: FluxtoMag_and_Deredden_example.html  intro_notebook.html
docs/pipeline_examples/: creation_notebooks.rst  estimation_notebooks.rst  evaluation_notebooks.rst
docs/rendered/core_examples/: 00_Useful_Utilities.rst  01_FileIO_DataStore.rst  02_FluxtoMag_and_Deredden.rst  03_Hyperbolic_Magnitude.rst  04_Iterate_Tabular_Data.rst  05_Build_Save_Load_Run_Pipeline.rst  06_Rail_Interfaces.rst  Build_Save_Load_Run_Pipeline.rst  FileIO_DataStore.rst  (+13 more)
logs/: core_logs.out  creation_logs.out  estimation_logs.out  evaluation_logs.out  goldenspike_logs.out
logs/interactive_examples/: core_logs.out  creation_logs.out  estimation_logs.out  evaluation_logs.out  goldenspike_logs.out
logs/pipeline_examples/: core_logs.out  creation_logs.out  estimation_logs.out  evaluation_logs.out  goldenspike_logs.out
src/rail_notebooks/: render_notebooks.py  update_readme.py
(+119 files in other folders)
